[CL-653] Fix provider setup bg and vault filter truncation

--- a/apps/web/src/scss/vault-filters.scss
+++ b/apps/web/src/scss/vault-filters.scss
@@ -68,6 +68,12 @@
   display: flex;
   align-items: center;
 
+  button,
+  a {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   .contents {
     display: contents;
   }
